--- a/com.proj.web/css/style.css
+++ b/com.proj.web/css/style.css
@@ -1,10 +1,12 @@
 html, body {
     height: 100%;
+    width: 100%;
     font-family: 'Playfair Display', serif;
 }
 
 .wrapper {
     min-height: 100%;
+    min-width: 100%;
     display: flex;
     flex-direction: column;
 }
@@ -14,15 +16,16 @@ html, body {
 }
 
 .navbar {
-    top: 0;
     position: sticky;
     overflow: hidden;
     background-color: black;
+    height: 56px;
 }
 
 .navbar_layout {
     box-sizing: border-box;
     display: block;
+    height: 56px;
     width: 100%;
     margin: 0 auto;
 }
@@ -32,28 +35,88 @@ html, body {
     display: flex;
     flex-direction: row;
     align-items: center;
+    height: 56px;
     width: 100%;
 }
-.navbar a {
-    float: left;
 
+.navbar a {
     color: white;
-    display: block;
-    text-align: center;
 }
 
-.navbar a:hover {
+.catalog:hover, .control_panel a:hover {
     background-color: #ddd;
     color: white;
 }
 
-.control_panel a {
-    float: right;
-
+.home {
+    margin-left: 10px;
+    margin-right: 20px;
 }
+.catalog {
+    margin-right: 20px;
+}
+
 .search_bar {
-    float: left;
+    flex-grow: 0.95;
+    margin-right: 8px;
+}
+
+.search_form {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    align-items: center;
+}
+
+.search_form_wrapper {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    flex: 1;
+}
+
+.search_input {
+    width: 100%;
+    height: 40px;
+    box-sizing: border-box;
     border: none;
-    margin-top: 40px;
-    margin-right: 100px;
+    border-radius: 0;
+    background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg fill='%234E4C4C' height='18' viewBox='0 0 24 24' width='18' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath clip-rule='evenodd' d='M10 2a8 8 0 104.906 14.32l5.387 5.387a1 1 0 001.414-1.414l-5.387-5.387A8 8 0 0010 2zm-6 8a6 6 0 1112 0 6 6 0 01-12 0z'/%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    padding-left: 40px;
+    background-position: 12px;
+}
+
+.search_cleaner {
+    display: flex;
+    flex-direction: row;
+    flex-shrink: 0;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    padding: 0;
+    border: none;
+    background: white;
+}
+
+.search_submit {
+    height: 40px;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    flex-shrink: 0;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    color: white;
+    background-color: green;
+}
+
+.nav_login {
+    margin-left: 20px;
+}
+
+.nav_cart {
+    margin-left: 20px;
 }
