--- a/com.proj.web/css/style.css
+++ b/com.proj.web/css/style.css
@@ -120,3 +120,44 @@ html, body {
 .nav_cart {
     margin-left: 20px;
 }
+
+/* Footer */
+.right {
+    float: right;
+}
+
+.left {
+    float: left;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+    width: auto\9;
+}
+footer {
+    border-top: 2px solid silver;
+    margin-top: 10px;
+    padding: 1%;
+    padding-bottom: 2%;
+}
+
+footer img {
+    width: 10%;
+    float: left;
+    margin-right: 5px;
+}
+
+#page-wrap:after {
+    content: "";
+    display: block;
+}
+
+footer, #page-wrap:after {
+    height: 10px;
+}
+
+#page-wrap {
+    min-height: 94%;
+    margin-bottom: -10px;
+}
